# xuggle-xuggler

./: Makefile.in  README  aclocal.m4  configure  configure.ac  cross.sh
captive/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
captive/ffmpeg/: Makefile.in  incarcerate.in
captive/ffmpeg/patches/: ffmpeg-0.10.16-mingw64.patch
captive/libmp3lame/: Makefile.in  incarcerate.in
captive/libogg/: Makefile.in
captive/liboil/: Makefile.in
captive/libopencore-amr/: Makefile.in
captive/librtmp/: Makefile.in
captive/librtmp/csrc/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
captive/libspeex/: Makefile.in
captive/libtheora/: Makefile.in
captive/libtiff/: Makefile.in
captive/libvo-aacenc/: Makefile.in
captive/libvorbis/: Makefile.in  README
captive/libvorbis/csrc/: Makefile.in  aclocal.m4  configure
captive/libvpx/: Makefile.in
captive/libx264/: Makefile.in  incarcerate.in
captive/openssl/: Makefile.in  README  incarcerate.in
captive/openssl-static/: Makefile.in  README  incarcerate.in
captive/openssl-static/csrc/: Configure
captive/openssl/csrc/: Makefile.org
captive/spandsp/: Makefile.in
captive/zlib/: Makefile.in
csrc/: Makefile.in
csrc/com/: Makefile.in
csrc/com/xuggle/: Makefile.am  Makefile.dependencies.in  Makefile.in
csrc/com/xuggle/ferry/: Makefile.in
csrc/com/xuggle/xuggler/: Makefile.in  StreamCoder.cpp
csrc/com/xuggle/xuggler/io/: Makefile.in
mk/buildtools/: build.properties  buildhelper.xml  ivysettings.xml
test/csrc/: Makefile.in
test/csrc/com/: Makefile.in
(+24 files in other folders)
